[metadata]
name = tethys-platform
version = 3.4.0
license = BSD 2-Clause License
summary =  Primary Tethys Platform Django Site Project
description-file = README.rst
url = http://tethysplatform.org/
author = Nathan Swain
author_email = nswain@aquaveo.com
classifier =
     Environment :: Web Environment
     Framework :: Django
     Intended Audience :: Developers
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Topic :: Internet :: WWW/HTTP
     Topic :: Internet :: WWW/HTTP :: Dynamic Content

[files]
packages =
    tethys_apps
    tethys_cli
    tethys_compute
    tethys_config
    tethys_gizmos
    tethys_layouts
    tethys_portal
    tethys_quotas
    tethys_sdk
    tethys_services

[entry_points]
console_scripts =
    tethys = tethys_cli:tethys_command

[extras]
tests =
    requests_mock
